# clickhouse-query-runner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  clickhouse-query-runner-prd.md  pyproject.toml
.github/workflows/: docker.yaml  publish.yaml  testing.yaml
src/clickhouse_query_runner/: __init__.py  checkpoint.py  cli.py  parser.py  progress.py  runner.py  settings.py
tests/: test_checkpoint.py  test_cli.py  test_parser.py  test_progress.py  test_runner.py  test_settings.py
