[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickhouse-query-runner"
version = "1.1.0"
description = "CLI tool to execute SQL queries against a ClickHouse cluster with checkpointing and progress monitoring"
authors = [
  {name = "Gavin M. Roy", email = "gavinr@aweber.com"},
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.14"
keywords = [
  "clickhouse",
  "sql",
  "query",
  "backfill",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
  "Typing :: Typed",
]
dependencies = [
  "asynch>=0.2.5",
  "pydantic>=2.11.3,<3",
  "pydantic-settings",
  "rich>=13.0.0",
  "valkey>=6.0.0",
]

[project.scripts]
clickhouse-query-runner = "clickhouse_query_runner.cli:main"

[project.urls]
Homepage = "https://github.com/gmr/clickhouse-query-runner"
Repository = "https://github.com/gmr/clickhouse-query-runner"
"Bug Tracker" = "https://github.com/gmr/clickhouse-query-runner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clickhouse_query_runner"]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 40
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  "ANN",    # flake9-annotations
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "E", "W", # pycodestyle
  "F",      # pyflakes
  "G",      # flake8-logging-format
  "I",      # isort
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "T20",    # flake8-print
  "UP",     # pyupgrade
  "F401",   # unused imports
  "F841",   # unused variables
  "B027",   # empty method in abstract base class
  "B905",   # zip() without explicit strict parameter
]
ignore = [
  "ANN401", # There is a time and place for typing.Any
  "RSE",    # contradicts Python Style Guide
]
flake8-quotes = { inline-quotes = "single" }
isort.split-on-trailing-comma=false

[dependency-groups]
dev = [
  "build",
  "coverage[toml]",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["clickhouse_query_runner"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if typing.TYPE_CHECKING:",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
